# testingob

./: .gitignore  .vercelignore  Cargo.toml  README.md  config.toml
analyzer/: Cargo.toml
analyzer/src/: features.rs  main.rs  model.rs
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  events.rs  lib.rs  redis_bus.rs  telemetry.rs
deploy/: Dockerfile.rust  Dockerfile.web  docker-compose.yml  nginx.conf
deploy/systemd/: lv-analyzer.service  lv-api.service  lv-ingestor.service  lv-liquidator.service  lv-web.service
ingestor/: Cargo.toml
ingestor/src/: main.rs  orderbook.rs  stream.rs  walls.rs
liquidator/: Cargo.toml
liquidator/src/: aggregator.rs  main.rs  streams.rs
scripts/: dev.ps1  install-vps.sh
web/: next.config.js  package.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/lib/: format.ts  types.ts
