[package]
name = "analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
