[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-stream = "0.1"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-stream = "0.3"
