[package]
name = "ingestor"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
ordered-float = { workspace = true }
chrono = { workspace = true }
backoff = { workspace = true }
